<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_history"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:openDrawer="start">

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/table">
                        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">

                                <TextView
                                        android:text="@string/activity"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content" android:layout_weight="0.3"
                                        android:textSize="18sp" android:textStyle="bold"/>
                                <TextView
                                        android:text="@string/start"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content" tools:layout_editor_absoluteX="46dp"
                                        android:layout_weight="0.3" android:textSize="18sp" android:textStyle="bold"/>
                                <TextView
                                        android:text="@string/end"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content" tools:layout_editor_absoluteX="329dp"
                                        android:layout_weight="0.3" android:textSize="18sp" android:textStyle="bold"/>
                                <TextView
                                        android:text="@string/time"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content" tools:layout_editor_absoluteX="352dp"
                                        android:layout_weight="0.1" android:textSize="18sp" android:textStyle="bold"/>

                        </LinearLayout>
                </LinearLayout>
        </ScrollView>
</android.support.constraint.ConstraintLayout>
