<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:id="@+id/linearLayout">
            <Button
                    android:text="@string/add_activity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/add_activity" android:layout_weight="1"/>
            <Button
                    android:text="@string/view_history"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/view_history" android:layout_weight="1"/>
        </LinearLayout>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/right_now_im"
                android:textSize="30sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:id="@+id/right_now_im"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:id="@+id/currentActivity"
                app:layout_constraintHorizontal_bias="0.501"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/right_now_im"/>
        <ScrollView
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.0"
                android:id="@+id/scrollView3"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/currentActivity">
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:orientation="vertical" android:id="@+id/activities"/>
        </ScrollView>
</android.support.constraint.ConstraintLayout>